# template-python

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  justfile  lefthook.yml  pyproject.toml
.github/workflows/: ci.yml
